--- a/Models/-VC/2024.11.29_Noro.md
+++ b/Models/-VC/2024.11.29_Noro.md
@@ -356,3 +356,216 @@ L_{total} = \alpha L_{diff} + \beta L_{ref},
 $$
 
 where \(\alpha\) and \(\beta\) are the weights assigned to each loss component. 
+
+## 4·Experiments
+
+\label{sec:exp}
+
+In this section, we conduct experiments to evaluate the performance of our proposed system, Noro.
+
+Specifically, we aim to answer the following evaluation questions (EQs):
+
+- [EQ1:] How does Noro perform in one-shot VC under different acoustic environments?
+
+- [EQ2:] How does the choice of source encoder (Linear, CNN, Conformer) affect the performance of the Noro system in terms of similarity and intelligibility?
+
+- [EQ3:] How does the reference encoder in one-shot VC systems, which is naturally aligned with self-supervised speaker representation learning tasks, compare to SOTA SSL systems in terms of speaker representation ability?
+
+To address EQ1 and EQ2, we adhere to the methodology outlined in[^Li2024Sef-Vc] by employing speaker embedding cosine similarity (SECS) and character error rate (CER).
+
+SECS is determined using a cutting-edge speaker representation model,\footnote{\url{https://huggingface.co/microsoft/wavlm-base-plus-sv}} with the results reflecting similarity to the original voice prompt.
+
+CER is calculated using an ASR model\footnote{\url{https://huggingface.co/facebook/hubert-large-ls960-ft}} to assess the intelligibility of the generated speech.
+
+For subjective evaluation, we use the Comparative Mean Opinion Score (CMOS) and the Similarity Mean Opinion Score (SMOS) to evaluate naturalness and similarity, respectively.
+
+We use 10 randomly selected pairs from the clean test set and another 10 from the noisy test set.
+
+Twelve proficient english users conducted the assessments.
+
+The naturalness scores range from one ("Bad") to five ("Excellent"), and the similarity scores range from one ("Different speaker, sure") to four ("Same speaker, sure").
+
+### One-shot VC Under Different Acoustic Environments (EQ.~1)
+
+\label{sec:exp_main}
+
+#### Experimental Setups
+
+To thoroughly assess the one-shot VC capabilities of the Noro system, we use two acoustic settings: clean and noisy.
+
+In the clean setting, the high-quality VCTK Corpus, recorded in a studio, serves as the evaluation dataset.
+
+VCTK includes recordings from 110 English speakers with diverse accents, characterized by minimal noise interference.
+
+The test set comprises 150 randomly selected pairs of source and reference speech from VCTK.
+
+For the noisy setting, we introduce noise of unseen types from the training stage to the reference speeches in the test set at SNR conditions ranging from 0-5 dB, creating challenging conditions to evaluate the robustness of VC systems.
+
+Under these two settings, we compare Noro with our baseline system.
+
+For both systems, we employ the Libri-Light[^Kahn2020Libri-Light] dataset for training, which consists of 60,000 hours of 16 kHz speech data from over 8,000 distinct speakers.
+
+We leverage the official segmentation scripts\footnote{\url{https://github.com/facebookresearch/libri-light}} to segment the speech data into approximately 15-second sequences by concatenating consecutive chunks with voice activity.
+
+Utterances longer than 30 seconds or shorter than 3 seconds are discarded.
+
+Both systems are trained with four NVIDIA GeForce RTX 4090 GPUs, each handling a batch size of 60 seconds of speech data, over a total of 800,000 steps to ensure convergence.
+
+The systems are optimized using the AdamW optimizer with a learning rate of 5e-5, incorporating 5,000 warmup steps followed by a cosine annealing learning rate schedule.
+
+The hyperparameters $\tau$ and $\alpha$ are set to 1.0, and $\beta$ is set at 0.25.
+
+For inferencing, we employ the Euler ODE solver, set the diffusion steps to 200, and the temperature to 1.2.
+
+To generate waveforms from melspectrograms, we utilize a pre-trained BigVGAN vocoder.
+
+Noro and the baseline system use the same model architecture, detailed hyper-parameters of are provided in Table~[tab:hyper](#tab:hyper).
+
+<a id="tab:hyper">The detailed hyper-parameters of Noro and the baseline system.</a>
+
+#### Experimental Results
+
+We use both objective and subjective metrics to evaluate the systems.
+
+For objective evaluation, we compare Noro with our baseline system and the baseline models.
+
+<a id="tab:vc">The experimental results for objective evaluation.</a>
+
+<a id="tab:vc-sub">The experimental results for subjective evaluation.</a>
+
+Table~[tab:vc](#tab:vc) summarizes the objective evaluation results for Noro and the baseline systems under both clean and noisy conditions.
+
+In clean settings, although FreeVC and FaCodec-VC marginally outperformed Noro in terms of CER, Noro still performed competitively with a CER of 4.74 and a strong SECS of 82.38.
+
+This demonstrates Noro’s ability to effectively perform one-shot voice conversion, accurately preserving semantic content while adapting to the speaker’s timbre.
+
+In noisy environments, the performance of baseline systems dropped significantly, with DiffVC’s SECS falling to 69.09, FreeVC to 73.83, and FaCodec-VC to 74.78—indicating a considerable reduction in their ability to preserve speaker characteristics.
+
+In contrast, Noro demonstrated significantly better noise robustness, achieving a CER of 4.66 and an SECS of 80.09, highlighting its reliability in noisy, real-world scenarios.
+
+Table~[tab:vc-sub](#tab:vc-sub) presents the subjective evaluation results of Noro and the baseline systems under both clean and noisy conditions.
+
+In the clean setting, both systems perform well in preserving the quality of converted speech and maintaining speaker identity. 
+However, under the noisy setting, the baseline system's performance declines significantly, with a CMOS of 2.09 and a SMOS of 2.75.
+
+This drop highlights the baseline system's vulnerability to noise in reference speech, affecting both perceived quality and speaker similarity of the converted speech.
+
+In contrast, Noro demonstrates remarkable robustness to noise, achieving a CMOS of 2.95 and a SMOS of 2.97.
+
+The minimal performance degradation from clean to noisy conditions underscores Noro's ability to maintain high subjective quality and speaker similarity even in the presence of background noise.
+
+Overall, the subjective evaluation confirms the objective results, reinforcing Noro's advantage in noise robustness and its potential applicability in real-world noisy environments.
+
+#### Qualitative Analysis
+
+Both the objective and subjective evaluations validate the robustness of Noro against noisy reference speech.
+
+To interpret the improvement, we visualize the reference representation $h_{\text{ref}}$ produced by the baseline system and Noro, respectively, via t-SNE.
+
+As observed from Fig.~[fig:emb](#fig:emb), the reference representation for clean and noisy reference speech in the baseline system shows a significant difference.
+
+This discrepancy leads to a substantial decline in the baseline system's performance when the reference speech is noisy.
+
+However, the reference representations for clean and noisy reference speech from Noro are mixed together.
+
+This is because, during the training stage, Noro utilizes our proposed dual-branch reference encoding module and noise-agnostic contrastive speaker loss, effectively learning a noise-agnostic reference representation.
+
+This capability explains Noro's superior performance under noisy settings.
+
+#### Visualization Insights
+
+![](figures/clean_embeddings.pdf)
+
+<a id="fig:clean_embeddings">Our Baseline System</a>
+
+### Evaluation of Different Source Encoders (Eq.~2)
+
+#### Experimental Setup
+
+This section describes the experimental setup used to evaluate various architectures for the source encoder in the Noro system, with the aim of identifying the most effective configuration.
+
+The source encoder fuses content and pitch features into a unified representation, which the Noro system then leverages to predict target speech representations.
+
+To optimize accuracy and computational efficiency, we evaluated several architectures for the source encoder:
+
+-  **Linear**: The linear encoder processes a 769-dimensional input vector (768 dimensions for content features and 1 for the pitch feature), projecting it to a 512-dimensional target representation.
+
+This basic approach serves as a baseline, focusing on dimensionality reduction with minimal computational complexity.
+
+-  **CNN**: The CNN-based encoder processes the 769-dimensional input using a 1-D convolutional layer with a kernel size of 3 and a hidden dimension of 512.
+
+This design is intended to capture local temporal patterns efficiently, using convolution to balance complexity and computational demand.
+
+-  **Conformer**: The Conformer encoder is designed to extract both local and global features, combining a self-attention mechanism with an attention dimension of 512 and 8 attention heads.
+
+This architecture enables effective modeling of intricate dependencies over both short and long time scales, potentially enhancing the quality of speech feature representations.
+
+This experiment follows the same setup as detailed in Sec.~[sec:exp_main](#sec:exp_main), with the sole modification being the choice of source encoder.
+
+#### Experimental Results
+
+<a id="tab:encoder-comparison">Performance Comparison of Different Source Encoders.</a>
+
+Table [tab:encoder-comparison](#tab:encoder-comparison) shows the performance comparison across encoder architectures.
+
+Although the Linear and CNN encoders yielded slightly higher similarity scores, their significantly higher CER values indicate reduced intelligibility.
+
+The Conformer encoder, however, achieved a balanced performance with competitive similarity scores and substantially lower CER, especially in noisy conditions, making it the optimal choice for the Noro system.
+
+The Conformer encoder’s superior performance likely stems from its hybrid architecture that combines convolutional and transformer-based components.
+
+The convolutional layers effectively capture fine-grained local features, while the self-attention mechanism adeptly models long-range global interactions.
+
+This combination allows the Conformer to achieve significantly reduced character error rates (CER), enhancing overall intelligibility in varied acoustic environments.
+
+### One-shot VC as Self-supervised Speaker Representation Learning (EQ.~3)
+
+#### Experimental Setups
+
+In previous sections, we demonstrated the strong one-shot VC capabilities of the VC systems, noting that the reference encoder effectively captures speaker timbre features.
+
+In this section, we repurpose the reference encoder, originally designed for one-shot VC, as a self-supervised learning (SSL) speaker encoder—designated VC-SPK2VEC.
+
+We evaluate its effectiveness in speaker representation against several popular pre-trained SSL models known for their superior performance in speaker-related downstream tasks such as speaker verification (SV) and speaker identification (SID)[^Chen2021WavLM], [^Yang2021Superb], under the SUPERB setups.
+
+Following the SUPERB[^Yang2021Superb] setups, we use SSL features in speaker verification.
+
+An input waveform is processed through a frozen pre-trained SSL model to extract frame-level features.
+
+A simple x-vector model[^Snyder2018X-Vectors] is then employed as the downstream model to determine if two utterances belong to the same speaker, forming a binary classification challenge.
+
+The training set for all models is VoxCeleb2[^Chung2018VoxCeleb2], augmented with noise, and testing is conducted on VoxCeleb1[^Nagrani2020VoxCeleb].
+
+For conventional SSL models, the final representation is obtained by computing the weighted sum of hidden states from each layer to enhance speaker representation: $\hat{o}t = \sum{l=1}^{L} w_l \cdot h_{l}^{t}$, where $h_{l}^{t}$ represents the hidden states from layer $l$ at time $t$, and $w_l$ denotes the normalized weight for each layer.
+
+For VC-SPK2VEC, the final representation is derived from the hidden states of the transformer encoder's last layer in the reference encoder.
+
+The x-vector downstream model employs an additive-margin softmax loss, with the same hyperparameters as described in[^Nagrani2020VoxCeleb].
+
+We calculate the cosine similarity between speaker embeddings for each pair of enrollment and test utterances to produce a score.
+
+To evaluate the speaker representation capabilities of VC-SPK2VEC, we compare it against several baseline models: log mel filterbank (FBANK), Modified CPC[^Rivière2020Unsupervised], wav2vec[^Schneider2019Wav2vec], vq-wav2vec[^Baevski2019Vq-Wav2vec], wav2vec 2.0[^Baevski2020Wav2vec], HuBERT[^Hsu2021Hubert], and WavLM[^Chen2021WavLM].
+
+The results for these baseline models are sourced directly from[^Yang2021Superb] and[^Chen2021WavLM].
+
+\vspace{-5pt}
+
+#### Experimental Results
+
+<a id="speaker">Comparison of VC-SPK2VEC with Baseline Models on the SV Task, where "Params." denotes the number of parameters in the model, and "Data" denotes the hours of data used for training the model.</a>
+
+Table~[speaker](#speaker) compares VC-SPK2VEC with the baseline models on the speaker verification (SV) task.
+
+VC-SPK2VEC achieves a competitive EER of 5.32\%.
+
+While it trails behind HuBERT Base (5.11\%) and the three WavLM model variants (4.69\%, 4.07\%, and 3.77\% for Base, Base+, and Large, respectively), it outperforms other baseline models such as wav2vec 2.0 Base, wav2vec 2.0 Large, and HuBERT Large.
+
+Notably, VC-SPK2VEC uses a comparatively smaller model size of 72.4M parameters.
+
+These results underscore VC-SPK2VEC's effectiveness as a self-supervised speaker encoder and highlight its comparable performance to SOTA SSL models.
+
+These findings highlight the great potential of leveraging speaker representation learning in one-shot speech generation tasks, as initially explored in[^Cho2020Learning], [^Cho2021Improving].
+
+With the advent of speech generation models trained on extensive datasets exceeding 100k hours of speech data, unifying speaker representation learning with generative speech tasks like voice conversion (VC) may lead to further advancements in both fields.
+
+Future research could benefit from investigating the relationship between the capability of speaker representation and factors such as the number of speakers included in the training set of one-shot VC systems or the model size of the reference encoder in these systems.
