--- a/Models/-VC/2024.11.29_Noro.md
+++ b/Models/-VC/2024.11.29_Noro.md
@@ -569,3 +569,26 @@ These findings highlight the great potential of leveraging speaker representatio
 With the advent of speech generation models trained on extensive datasets exceeding 100k hours of speech data, unifying speaker representation learning with generative speech tasks like voice conversion (VC) may lead to further advancements in both fields.
 
 Future research could benefit from investigating the relationship between the capability of speaker representation and factors such as the number of speakers included in the training set of one-shot VC systems or the model size of the reference encoder in these systems.
+
+## 5·Conclusions
+
+\label{sec:conclude}
+
+In this paper, we introduced Noro, a noise-robust one-shot voice conversion system featuring a dual-branch reference encoding module and a noise-agnostic contrastive speaker loss to enhance noise robustness in real-world scenarios.
+
+Our experimental results show that Noro significantly outperforms our baseline system under both clean and noisy conditions, providing a practical solution for real-world applications where reference speeches are often contaminated with noise.
+
+Future work could further improve the robustness of VC systems against noisy source speeches.
+
+Additionally, we explored the hidden speaker representation capabilities of VC systems by repurposing the reference encoder as an SSL speaker encoder, termed VC-SPK2VEC.
+
+Extensive evaluations on the SUPERB benchmark demonstrated that VC-SPK2VEC performs competitively against several advanced SSL models, highlighting its potential for advancing speaker representation learning through one-shot VC tasks.
+
+This work underscore an interesting research direction for unifying speaker representation learning and VC.
+
+Exploring the integration of large-scale voice conversion systems and extensive unlabeled data for speaker representation learning presents promising directions for advancing both voice conversion and speaker representation learning.
+
+\bibliographystyle{IEEEtran}
+\bibliography{main}
+
+\end{document}
