--- a/Models/-VC/2021.06.18_VQMIVC.md
+++ b/Models/-VC/2021.06.18_VQMIVC.md
@@ -58,3 +58,29 @@ During inference, one-shot VC is achieved by only replacing the source speaker r
 The main contribution of this work lies in applying the combination of VQCPC and MI to achieve SRD, without any requirements of supervision information such as text transcriptions or speaker labels.
 
 Extensive experiments have been conducted to thoroughly analyze the importance of MI, where information leakage issues can be significantly alleviated for enhanced SRD.
+
+## 2·Related Work
+
+VC performance is critically dependent on the availability of the target speaker’s voice data for training [^Toda2007Voice], [^Helander2010Voice], [^Erro2009Inca], [^Sun2016Phonetic], [^Hsu2017Voice], [^Kaneko2017Parallel-Data-Free], [^Kameoka2018Stargan-Vc].
+
+Hence, the challenge of one-shot VC is in performing conversion across arbitrary speakers that may be unseen during training, and with only one single target-speaker utterance for reference.
+
+Previous approaches for one-shot VC are based on SRD, which aims to separate speaker information from spoken content as far as possible.
+
+Related work include: tunable information-constraining bottleneck [^Qian2019Autovc], [^Qian2020F0-Consistent], [^Qian2020Unsupervised], instance normalization techniques [^Chou2019One-Shot], [^Chen2021Again-Vc] and vector quantization (VQ) [^Wu2020Vqvc+], [^Chorowski2019Unsupervised].
+
+We adopt VQCPC [^Niekerk2020Vector-Quantized], [^Baevski2019Vq-Wav2vec], which is an improved version of VQ, to extract accurate content representations.
+
+Without explicit constraints between different speech representations, information leakage tends to occur, which degrades VC performance.
+
+We draw inspirations from information theory [^Gierlichs2008Mutual] in using MI as a regularizer to constrain the dependency between variables.
+
+As MI computation is challenging for variables with unknown distribution, various methods have been explored to estimate MI lower bound [^Nguyen2010Estimating], [^Gutmann2010Noise-Contrastive], [^Belghazi2018Mutual] in SRD-based speech tasks [^Ravanelli2019Learning], [^Kwon2020Intra-Class], [^Hu2020Unsupervised] .
+
+To guarantee the reduction of MI values, we propose to use variational contrastive log-ratio upper bound (vCLUB) [^Cheng2020Club].
+
+While a recent effort [^Yuan2021Improving] employs MI for VC by using speaker labels as the supervision for learning speaker representations, our proposed approach differs from [^Yuan2021Improving] in terms of the combination of VQCPC and MI for fully unsupervised training, and the incorporation of pitch representations to maintain source intonation variations.
+
+![](architecture.png)
+
+<a id="arc">Diagram of the proposed VQMIVC system.</a>
