--- a/Models/-VC/2021.06.18_VQMIVC.md
+++ b/Models/-VC/2021.06.18_VQMIVC.md
@@ -274,3 +274,127 @@ We note that no text transcriptions or speaker labels are used during training, 
 ### One-shot VC
 
 During conversion, the content and pitch representations are first extracted from source speaker's utterance $**X**_*src*$ as $\hat{**Z**}_{src}=*f*({**X**_*src*};{{\theta }_{c}})$ and $**p**_{src}$ respectively, the speaker representation is extracted from only one target speaker's utterance $**X**_*tgt*$ as $**s**_{tgt}=*f*({**X**_{tgt}};{{\theta }_{s}})$, then the decoder generates the converted mel-spectrograms as *f*$(\hat{**Z**}_{src},**s**_{tgt},**p**_{src};{\theta}_d)$.
+
+## 4·Experiments
+
+### Experimental setup
+
+All experiments are conducted on the VCTK corpus [^Veaux2016Superseded-CSTR] with 110 English speakers, which are randomly split into 90 and 20 speakers as training and testing sets respectively.
+
+The testing speakers are treated as unseen speakers that are used to perform one-shot VC.
+
+For acoustic features extraction, all audio recordings are downsampled to 16kHz, 80-dim mel-spectrograms and $*F*_0$ are both calculated with 25ms Hanning window, 10ms frame shift and 400-point fast Fourier transform.
+
+The proposed VC network consists of the content encoder, speaker encoder and decoder.
+
+The content encoder contains a *h*-net, a quantizer *q* and a *g*-net.
+
+The *h*-net is composed of a convolutional layer with stride of 2, four blocks with layer normalization, 512-dim linear layer and ReLU activation function for each block.
+
+The quantizer contains a codebook with 512 64-dim learnable vectors.
+
+The *g*-net is a 256-dim uni-directional RNN layer.
+
+For CPC, the future prediction step *M* is 6 and the number of negative samples $|{\Omega}_{k,t,m}|$ is 10.
+
+The speaker encoder follows [^Chou2019One-Shot], which contains 8 ConvBank layers to encode the long-term information, 12 convolutional layers with 1 average-pooling layer, and 4 linear layers to derive the 256-dim speaker representation.
+
+The decoder follows [^Qian2019Autovc] with a 1024-dim LSTM layer, three convolutional layers, two 1024-dim LSTM layers and a 80-dim linear layer.
+
+Besides, a 5-layer convolutional based Postnet is added to refine predicted mel-spectrograms, which are converted to waveform by Parallel WaveGAN vocoder [^Yamamoto2020Parallel] that is trained by VCTK corpus.
+
+The variational approximation ${{Q}_{{{\theta }_{**u**,**v**}}}}(**u**|**v**)$ for all MI is parameterized in Gaussian distribution as ${{Q}_{{{\theta }_{**u**,**v**}}}}(**u**|**v**)=\mathcal{N} (**u**|\mu (**v**),diag({{\sigma }^{2}}(**v**)))$ with mean $\mu (**v**)$ and variance ${\sigma }^{2}(**v**)$ inferred by a two-way fully-connected network ${{\theta }_{**u**,**v**}}$ that is composed of four 256-dim hidden layers.
+
+The VC network is trained using Adam optimizer [^Kingma2014Adam] with 15-epoch warmup increasing the learning rate from 1e-6 to 1e-3, which is halved every 100 epochs after 200 epochs until 500 epochs in total.
+
+Batch size is 256 and 128 frames are randomly selected from each utterance for training per iteration.
+
+Variational approximation networks are also trained with the Adam optimizer with a learning rate of 3e-4.
+
+We compare our proposed VQMIVC method with AutoVC [^Qian2019Autovc], AdaIN-VC [^Chou2019One-Shot] and VQVC+ [^Wu2020Vqvc+], which are among the state-of-the-art one-shot VC methods. 
+
+<a id="mi-est">MI among content, speaker and pitch representations, where MI is estimated on all testing speakers for 10 rounds, and mean $\pm$ standard-variance are reported.</a>
+
+<a id="con-to-spk">CER/WER for generated speech using speaker representations from Same and Mixed utterances by varying ${\lambda}_{MI}$.</a>
+
+### Experimental results and analysis
+
+#### Speech representation disentanglement performance
+
+In the VC loss ([vc-loss](#vc-loss)), ${\lambda}_{MI}$ determines the capacity of MI to enable SRD, we first vary ${\lambda}_{MI}$ to evaluate disentanglement degrees between different speech representations extracted from all testing utterances  by computing vCLUB as shown in Table [mi-est](#mi-est).
+
+We can see that when ${\lambda}_{MI}$ increases, MI tends to decrease to reduce the correlation among different speech representations. 
+
+To measure how much content information is entangled with speaker representation, we adopt two ways to generate the speech, i.e., (1) *Same*, i.e., the content, speaker and pitch representations of the same utterance are used to generate the speech; (2) *Mixed*, i.e., the content and pitch representations of one utterance and speaker representation of another utterance are used to generate the speech, both utterances belong to the same speaker.
+
+Then an automatic speech recognition (ASR) system is used to obtain character/word error rate (CER/WER) of the generated speech.
+
+The increased CER and WER from `*Same*' to `*Mixed*' are denoted as ${\triangle}_C$ and ${\triangle}_W$ respectively.
+
+As the only difference in inputs for speech generation is that of speaker representation, we can conclude that larger values of ${\triangle}_C$ and ${\triangle}_W$ reflect that more content information is leaked to speaker representation.
+
+All testing speakers are used for speech generation, and the publicly released Jasper-based ASR system [^Li2019Jasper] is used.
+
+The results are shown in Table [con-to-spk](#con-to-spk), we can see that when MI is not used (${\lambda}_{MI}$=0), the generated speech is severely contaminated by the undesired content information that resides in the speaker representations as indicated by the largest values of ${\triangle}_C$ and ${\triangle}_W$.
+
+However, when MI is used (${\lambda}_{MI}${\textgreater}0), significant reductions of ${\triangle}_C$ and ${\triangle}_W$ can be obtained.
+
+As ${\lambda}_{MI}$ increases, both ${\triangle}_C$ and ${\triangle}_W$ decrease, showing that higher ${\lambda}_{MI}$ can, to a larger degree, alleviate leakage of content information into the speaker representation.
+
+In addition, we design two speaker classifiers, taking $\hat{**Z**}$ and **s** as inputs respectively; and one predictor, taking in $\hat{**Z**}$ to infer **p**.
+
+The classifiers and predictor are all 4-layer fully-connected network with 256-dim hidden size.
+
+Higher speaker classification accuracy denotes more speaker information in $\hat{**Z**}$ or **s**, while higher prediction loss (mean square error) for **p** denotes less pitch information in $\hat{**Z**}$.
+
+The results are shown in Table [acc-loss](#acc-loss).
+
+We can observe that $\hat{**Z**}$ contains less speaker and pitch information when ${\lambda}_{MI}$ increases to achieve lower accuracy and higher pitch loss.
+
+Speaker classification accuracy on **s** is high for all ${\lambda}_{MI}$, while the accuracy decreases when ${\lambda}_{MI}$ increases, showing that **s** contains abundant speaker information, but higher ${\lambda}_{MI}$ tends to make **s** lose speaker information.
+
+To ensure proper disentanglement, we set ${\lambda}_{MI}$ to 1e-2 for the following experiments.  
+
+<a id="acc-loss">Speaker classification accuracy on $\hat{**Z**}$ (content) and **s** (speaker), and prediction loss for **p** (pitch) inferred by $\hat{**Z**}$.</a>
+
+<a id="asr-pcc">ASR and $*F*_0$-PCC results for one-shot VC.</a>
+
+#### Content preservation and \texorpdfstring{$\textit{F
+
+_0$}{Lg} variation consistency}
+
+To evaluate whether the converted voice maintains linguistic content and intonation variations of the source voice, we test the CER/WER of the converted speech and calculate the Pearson correlation coefficient (PCC) [^Benesty2009Pearson] between $*F*_0$ of source and converted voice.
+
+PCC ranges from -1 to 1 and can be effectively used to measure the correlation between two variables, where a higher $*F*_0$-PCC denotes that the converted voice has higher $*F*_0$ variation consistency with the source voice. 10 testing speakers are randomly selected as the source speakers, and the remaining 10 testing speakers are treated as target speakers, which leads to 100 conversion pairs where all source utterances are used for conversion.
+
+The results for different methods are shown in Table [asr-pcc](#asr-pcc), where the results for source speech are also reported as the performance upper bound.
+
+It can be seen that VQMIVC achieves the lowest CER and WER among all methods, which shows the robustness of the proposed VQMIVC method to preserve the source linguistic content.
+
+Besides, we observe that ASR performance drops significantly without using MI (w/o MI), as the converted voice is contaminated by undesired content information entangled with speaker representations.
+
+In addition, by providing source pitch representations, we can explicitly and effectively control intonation variations of the converted voice to achieve high $*F*_0$ variation consistency, as indicated by largest $*F*_0$-PCC of 0.781 obtained by the proposed methods.
+
+![](MOS.png)
+
+<a id="MOS">Comparison results of MOS with 95\% confidence intervals for speech naturalness and speaker similarity.</a>
+
+\vspace{-0.5em}
+
+#### Speech naturalness and speaker similarity
+
+Subjective tests are conducted by 15 subjects to evaluate the speech naturalness and speaker similarity, in terms of 5-point mean opinion score (MOS), i.e, 1-bad, 2-poor, 3-fair, 4-good, 5-excellent.
+
+We randomly select two source speakers and two target speakers from the testing speakers, each source or target set contains one male and one female speaker, which results in 4 conversion pairs, where 18 converted utterances from each pair are evaluated by each subject.
+
+The scores are averaged across all pairs and reported in Figure [MOS](#MOS).
+
+Source (Oracle) and Target (Oracle) denote that the speech is synthesized with ground-truth mel-spectrograms of source and target utterances by Parallel WaveGAN respectively.
+
+We observe that the proposed method, denoted as `w/o MI', outperforms AutoVC and VQVC+, but is inferior to AdaIN-VC.
+
+Pronunciation errors are frequently detected in the converted voice by `w/o MI' via our official listening tests, which can be reflected by the high CER/WER of `w/o MI' in Table [asr-pcc](#asr-pcc).
+
+These issues can be greatly alleviated by the proposed MI minimization, where improved speech naturalness and speaker similarity are achieved.
+
+This indicates that MI minimization facilitates proper SRD to derive accurate content representation and effective speaker representation, which can be used to generate the natural speech with high voice similarity to the target speaker.
