--- a/Models/-VC/2021.06.18_VQMIVC.md
+++ b/Models/-VC/2021.06.18_VQMIVC.md
@@ -731,3 +731,42 @@ coefficient,'' in \emph{Noise reduction in speech processing}.\hskip 1em plus
 \end{thebibliography}
 
 \end{document}
+
+## References
+
+[^Mohammadi2017Overview]: An Overview of Voice Conversion Systems. Speech Communication 2017.
+[^Rentzos2003Transformation]: Transformation of Speaker Characteristics for Voice Conversion. 2003 IEEE Workshop on Automatic Speech Recognition and Understanding (IEEE Cat. No. 03EX721) 2003.
+[^Oyamada2017Non-Native]: Non-Native Speech Conversion With Consistency-Aware Recursive Network and Generative Adversarial Network. 2017 Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC) 2017.
+[^Liu2018Voice]: Voice Conversion Across Arbitrary Speakers Based on a Single Target-Speaker Utterance.. Interspeech 2018.
+[^Lu2019One-Shot]: One-Shot Voice Conversion With Global Speaker Embeddings.. Interspeech 2019.
+[^Qian2019Autovc]: Autovc: Zero-Shot Voice Style Transfer With Only Autoencoder Loss. International Conference on Machine Learning 2019.
+[^Chou2019One-Shot]: One-Shot Voice Conversion by Separating Speaker and Content Representations With Instance Normalization. Interspeech 2019.
+[^Wu2020Vqvc+]: VQVC+: One-Shot Voice Conversion by Vector Quantization and U-Net Architecture. Interspeech 2020.
+[^Niekerk2020Vector-Quantized]: Vector-Quantized Neural Networks for Acoustic Unit Discovery in the ZeroSpeech 2020 Challenge. Interspeech 2020.
+[^Baevski2019Vq-Wav2vec]: Vq-Wav2vec: Self-Supervised Learning of Discrete Speech Representations. arXiv:1910.05453.
+[^Toda2007Voice]: Voice Conversion Based on Maximum-Likelihood Estimation of Spectral Parameter Trajectory. IEEE Transactions on Audio, Speech, and Language Processing 2007.
+[^Helander2010Voice]: Voice Conversion Using Partial Least Squares Regression. IEEE Transactions on Audio, Speech, and Language Processing 2010.
+[^Erro2009Inca]: INCA Algorithm for Training Voice Conversion Systems From Nonparallel Corpora. IEEE Transactions on Audio, Speech, and Language Processing 2009.
+[^Sun2016Phonetic]: Phonetic Posteriorgrams for Many-to-One Voice Conversion Without Parallel Data Training. 2016 IEEE International Conference on Multimedia and Expo (ICME) 2016.
+[^Hsu2017Voice]: Voice Conversion From Unaligned Corpora Using Variational Autoencoding Wasserstein Generative Adversarial Networks. arXiv:1704.00849.
+[^Kaneko2017Parallel-Data-Free]: Parallel-Data-Free Voice Conversion Using Cycle-Consistent Adversarial Networks. arXiv:1711.11293.
+[^Kameoka2018Stargan-Vc]: Stargan-Vc: Non-Parallel Many-to-Many Voice Conversion Using Star Generative Adversarial Networks. 2018 IEEE Spoken Language Technology Workshop (SLT) 2018.
+[^Qian2020F0-Consistent]: F0-Consistent Many-to-Many Non-Parallel Voice Conversion via Conditional Autoencoder. ICASSP 2020-2020 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2020.
+[^Qian2020Unsupervised]: Unsupervised Speech Decomposition via Triple Information Bottleneck. International Conference on Machine Learning 2020.
+[^Chen2021Again-Vc]: Again-Vc: A One-Shot Voice Conversion Using Activation Guidance and Adaptive Instance Normalization. ICASSP 2021-2021 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2021.
+[^Chorowski2019Unsupervised]: Unsupervised Speech Representation Learning Using Wavenet Autoencoders. IEEE/ACM Transactions on Audio, Speech, and Language Processing 2019.
+[^Gierlichs2008Mutual]: Mutual Information Analysis. International Workshop on Cryptographic Hardware and Embedded Systems 2008.
+[^Nguyen2010Estimating]: Estimating Divergence Functionals and the Likelihood Ratio by Convex Risk Minimization. IEEE Transactions on Information Theory 2010.
+[^Gutmann2010Noise-Contrastive]: Noise-Contrastive Estimation: A New Estimation Principle for Unnormalized Statistical Models. Proceedings of the Thirteenth International Conference on Artificial Intelligence and Statistics 2010.
+[^Belghazi2018Mutual]: Mutual Information Neural Estimation. International Conference on Machine Learning 2018.
+[^Ravanelli2019Learning]: Learning Speaker Representations With Mutual Information. Interspeech 2019.
+[^Kwon2020Intra-Class]: Intra-Class Variation Reduction of Speaker Representation in Disentanglement Framework. Interspeech 2020.
+[^Hu2020Unsupervised]: Unsupervised Style and Content Separation by Minimizing Mutual Information for Speech Synthesis. ICASSP 2020-2020 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2020.
+[^Cheng2020Club]: Club: A Contrastive Log-Ratio Upper Bound of Mutual Information. International Conference on Machine Learning 2020.
+[^Yuan2021Improving]: Improving Zero-Shot Voice Style Transfer via Disentangled Representation Learning. arXiv:2103.09420.
+[^Oord2018Representation]: Representation Learning With Contrastive Predictive Coding. arXiv:1807.03748.
+[^Veaux2016Superseded-CSTR]: Superseded-CSTR VCTK Corpus: English Multi-Speaker Corpus for CSTR Voice Cloning Toolkit. 
+[^Yamamoto2020Parallel]: Parallel WaveGAN: A Fast Waveform Generation Model Based on Generative Adversarial Networks With Multi-Resolution Spectrogram. ICASSP 2020-2020 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2020.
+[^Kingma2014Adam]: Adam: A Method for Stochastic Optimization. arXiv:1412.6980.
+[^Li2019Jasper]: Jasper: An End-to-End Convolutional Neural Acoustic Model. Interspeech 2019.
+[^Benesty2009Pearson]: Pearson Correlation Coefficient. Noise Reduction in Speech Processing 2009.
